modification to table 1 of README.

--- a/README.org
+++ b/README.org
@@ -4,108 +4,58 @@
 
 * Number Mnemonic List
 
-|-----+----------|
-|   1 | 火车     |
-|   2 | 天鹅     |
-|   3 | 山       |
-|   4 | 钱       |
-|   5 | 手       |
-|   6 | 牛       |
-|   7 | 勺子     |
-|   8 | 蜜蜂     |
-|   9 | 猫       |
-|  10 | 跳蚤     |
-|  11 | 筷子     |
-|  12 | 大钟     |
-|  13 | 女巫     |
-|  14 | 戒指     |
-|  15 | 月亮     |
-|  16 | 石榴     |
-|  17 | 杂志     |
-|  18 | 罗汉     |
-|  19 | 高尔夫   |
-|  20 | 金字塔   |
-|  21 | Adele    |
-|  22 | 鸳鸯     |
-|  23 | 乔丹     |
-|  24 | 翔       |
-|  25 | 实验室   |
-|  26 | 铁       |
-|  27 | 魔方     |
-|  28 | 星云     |
-|  29 | 香烟     |
-|  30 | 山洞     |
-|  31 | 山药     |
-|  32 | 牙齿     |
-|  33 | 耳朵     |
-|  34 | 沙发     |
-|  35 | 胶卷     |
-|  36 | 古书     |
-|  37 | 体温计   |
-|  38 | 手枪     |
-|  39 | 冰山     |
-|  40 | 僵尸     |
-|  41 | Jupiter  |
-|  42 | 宇宙     |
-|  43 | 金刚狼   |
-|  44 | 石狮     |
-|  45 | 火鸡     |
-|  46 | 泥鳅     |
-|  47 | 死骑     |
-|  48 | 洗发水   |
-|  49 | 石臼     |
-|  50 | 郭靖     |
-|  51 | 机关枪   |
-|  52 | 扑克     |
-|  53 | 如来     |
-|  54 | 骷髅     |
-|  55 | 眼泪     |
-|  56 | 牡丹     |
-|  57 | 导弹     |
-|  58 | 小龙女   |
-|  59 | 杨柳     |
-|  60 | 酒瓶     |
-|  61 | 儿童     |
-|  62 | 梅花鹿   |
-|  63 | 栅栏     |
-|  64 | 坦克     |
-|  65 | 摇篮     |
-|  66 | 脚踏车   |
-|  67 | 慢羊羊   |
-|  68 | 渣土车   |
-|  69 | 登山扣   |
-|  70 | 麒麟     |
-|  71 | 猕猴桃   |
-|  72 | 孙悟空   |
-|  73 | 雨花石   |
-|  74 | 堂吉诃德 |
-|  75 | 鸡       |
-|  76 | 哈雷彗星 |
-|  77 | 围棋     |
-|  78 | 周星驰   |
-|  79 | 小提琴   |
-|  80 | 摩托车   |
-|  81 | 数独     |
-|  82 | 大菠萝   |
-|  83 | 芭蕉扇   |
-|  84 | bus      |
-|  85 | 单簧管   |
-|  86 | 八路     |
-|  87 | 霸气狗   |
-|  88 | 葫芦娃   |
-|  89 | 天安门   |
-|  90 | 耶稣     |
-|  91 | 桌球     |
-|  92 | 足球     |
-|  93 | 宫本武藏 |
-|  94 | 教师     |
-|  95 | 秦始皇   |
-|  96 | 海螺     |
-|  97 | 汽油     |
-|  98 | 酒吧     |
-|  99 | 爱因斯坦 |
-| 100 | 水蒸气   |
-|-----+----------|
+|----+----------+-----+----------|
+|  1 | 火车     |   2 | 天鹅     |
+|  3 | 山       |   4 | 钱       |
+|  5 | 手       |   6 | 牛       |
+|  7 | 勺子     |   8 | 蜜蜂     |
+|  9 | 猫       |  10 | 跳蚤     |
+| 11 | 筷子     |  12 | 大钟     |
+| 13 | 女巫     |  14 | 戒指     |
+| 15 | 月亮     |  16 | 石榴     |
+| 17 | 杂志     |  18 | 罗汉     |
+| 19 | 高尔夫   |  20 | 金字塔   |
+| 21 | Adele    |  22 | 鸳鸯     |
+| 23 | 乔丹     |  24 | 翔       |
+| 25 | 实验室   |  26 | 铁       |
+| 27 | 魔方     |  28 | 星云     |
+| 29 | 香烟     |  30 | 山洞     |
+| 31 | 山药     |  32 | 牙齿     |
+| 33 | 耳朵     |  34 | 沙发     |
+| 35 | 胶卷     |  36 | 古书     |
+| 37 | 体温计   |  38 | 手枪     |
+| 39 | 冰山     |  40 | 僵尸     |
+| 41 | Jupiter  |  42 | 宇宙     |
+| 43 | 金刚狼   |  44 | 石狮     |
+| 45 | 火鸡     |  46 | 泥鳅     |
+| 47 | 死骑     |  48 | 洗发水   |
+| 49 | 石臼     |  50 | 郭靖     |
+| 51 | 机关枪   |  52 | 扑克     |
+| 53 | 如来     |  54 | 骷髅     |
+| 55 | 眼泪     |  56 | 牡丹     |
+| 57 | 导弹     |  58 | 小龙女   |
+| 59 | 杨柳     |  60 | 酒瓶     |
+| 61 | 儿童     |  62 | 梅花鹿   |
+| 63 | 栅栏     |  64 | 坦克     |
+| 65 | 摇篮     |  66 | 脚踏车   |
+| 67 | 慢羊羊   |  68 | 渣土车   |
+| 69 | 登山扣   |  70 | 麒麟     |
+| 71 | 猕猴桃   |  72 | 孙悟空   |
+| 73 | 雨花石   |  74 | 堂吉诃德 |
+| 75 | 鸡       |  76 | 哈雷彗星 |
+| 77 | 围棋     |  78 | 周星驰   |
+| 79 | 小提琴   |  80 | 摩托车   |
+| 81 | 数独     |  82 | 大菠萝   |
+| 83 | 芭蕉扇   |  84 | bus      |
+| 85 | 单簧管   |  86 | 八路     |
+| 87 | 霸气狗   |  88 | 葫芦娃   |
+| 89 | 天安门   |  90 | 耶稣     |
+| 91 | 桌球     |  92 | 足球     |
+| 93 | 宫本武藏 |  94 | 教师     |
+| 95 | 秦始皇   |  96 | 海螺     |
+| 97 | 汽油     |  98 | 酒吧     |
+| 99 | 爱因斯坦 | 100 | 水蒸气   |
+|----+----------+-----+----------|
 
 
 * Kana Test
